--- a/app/src/main/res/layout/activity_menu.xml
+++ b/app/src/main/res/layout/activity_menu.xml
@@ -17,6 +17,7 @@
         android:layout_weight="1">
 
         <Button
+            android:layout_margin="2dp"
             android:id="@+id/buttonProduto"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
@@ -26,10 +27,14 @@
             android:textColor="@color/color_menu"
             android:textStyle="bold"
             android:textSize="40px"
+            android:background="@drawable/button_background"
              />
 
 
         <Button
+            android:layout_marginRight="2dp"
+            android:layout_marginBottom="2dp"
+            android:layout_marginTop="2dp"
             android:id="@+id/buttonCliente"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
@@ -37,6 +42,7 @@
             android:drawableTop="@drawable/cliente_24"
             android:text="@string/cliente"
             android:textColor="@color/color_menu"
+            android:background="@drawable/button_background"
             android:textStyle="bold"
             android:textSize="40px"
             />
@@ -50,6 +56,9 @@
         android:layout_weight="1">
 
         <Button
+            android:layout_marginBottom="2dp"
+            android:layout_marginRight="2dp"
+            android:layout_marginLeft="2dp"
             android:id="@+id/buttonVenda"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
@@ -59,10 +68,13 @@
             android:textSize="40px"
             android:textStyle="bold"
             android:textColor="@color/color_menu"
+            android:background="@drawable/button_background"
             />
 
 
         <Button
+            android:layout_marginRight="2dp"
+            android:layout_marginBottom="2dp"
             android:id="@+id/buttonUsuario"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
@@ -72,6 +84,7 @@
             android:textColor="@color/color_menu"
             android:textStyle="bold"
             android:textSize="40px"
+            android:background="@drawable/button_background"
             />
     </LinearLayout>
 
@@ -83,6 +96,9 @@
         android:layout_weight="1">
 
         <Button
+            android:layout_marginBottom="2dp"
+            android:layout_marginRight="2dp"
+            android:layout_marginLeft="2dp"
             android:id="@+id/buttonRelatorio"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
@@ -92,6 +108,7 @@
             android:textColor="@color/color_menu"
             android:textStyle="bold"
             android:textSize="40px"
+            android:background="@drawable/button_background"
             />
     </LinearLayout>
 
