--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -2,6 +2,9 @@
 <resources>
     <dimen name="margem_tela_login">10dp</dimen>
     <dimen name="margem_tela_menu">15dp</dimen>
+    <dimen name="margem_tela_cadastro">5dp</dimen>
+    <dimen name="box_formulario">50sp</dimen>
+    <dimen name="espaco_formulario">5sp</dimen>
     <dimen name="font_formulario">20sp</dimen>
 
 </resources>
