--- a/app/src/main/res/layout/activity_cadastrar_cliente.xml
+++ b/app/src/main/res/layout/activity_cadastrar_cliente.xml
@@ -14,6 +14,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
+        android:layout_margin="@dimen/margem_tela_menu"
         android:layout_weight="1"
         >
 
@@ -178,6 +179,7 @@
         android:id="@+id/buttonSalvar"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginBottom="@dimen/margem_tela_menu"
         android:layout_gravity="center_horizontal|center_vertical"
         android:drawableTop="@drawable/ic_save_black_24dp"
         android:background="@drawable/button_background"
