--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:layout_margin="@dimen/margem_tela_login"
+    android:layout_margin="@dimen/margem_tela_menu"
     android:background="@color/bg_tela_login"
     android:gravity="center_vertical|center_horizontal"
     android:orientation="vertical"
@@ -14,7 +14,7 @@
     <LinearLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:background="@color/color_menu"
+        android:background="@drawable/background_tela"
         android:orientation="vertical"
         android:paddingLeft="10dp"
         android:paddingTop="10dp"
@@ -28,44 +28,39 @@
             android:layout_gravity="center_horizontal"
             android:orientation="horizontal">
 
-            <TextView
-                android:id="@+id/textViewLogin"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:text="@string/login"
-                android:textColor="@color/fontTelaLogin"
-                android:textSize="20sp" />
-
             <EditText
                 android:id="@+id/editTextLogin"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
+                android:layout_height="@dimen/box_formulario"
+                android:hint="@string/login"
+                android:background="@drawable/box_formulario_background"
                 android:ems="10"
                 android:inputType="text" />
 
 
         </LinearLayout>
+        <Space
+            android:layout_width="match_parent"
+            android:layout_height="@dimen/espaco_formulario" />
 
         <LinearLayout
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:orientation="horizontal">
 
-            <TextView
-                android:id="@+id/textViewSenha"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:text="@string/senha"
-                android:textColor="@color/fontTelaLogin"
-                android:textSize="20sp" />
-
             <EditText
                 android:id="@+id/editTextSenha"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
+                android:layout_height="@dimen/box_formulario"
+                android:hint="@string/senha"
+                android:background="@drawable/box_formulario_background"
                 android:ems="10"
                 android:inputType="textPassword" />
         </LinearLayout>
+
+        <Space
+            android:layout_width="match_parent"
+            android:layout_height="@dimen/espaco_formulario" />
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -76,6 +71,7 @@
                 android:id="@+id/checkBoxLembrar"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:gravity="center_vertical"
                 android:layout_gravity="left"
                 android:layout_weight="1"
                 android:text="@string/lembrar"
@@ -86,6 +82,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_gravity="right"
+                android:background="@drawable/button_background"
                 android:textColor="@color/color_menu"
                 android:textStyle="bold"
                 android:layout_weight="1"
