--- a/app/src/main/res/layout/activity_menu.xml
+++ b/app/src/main/res/layout/activity_menu.xml
@@ -13,7 +13,7 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:background="@color/color_menu"
+        android:background="@drawable/background_tela"
         android:layout_weight="1">
 
         <Button
@@ -51,7 +51,7 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:background="@color/color_menu"
+        android:background="@drawable/background_tela"
         android:orientation="horizontal"
         android:layout_weight="1">
 
@@ -92,7 +92,7 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="horizontal"
-        android:background="@color/color_menu"
+        android:background="@drawable/background_tela"
         android:layout_weight="1">
 
         <Button
