--- a/app/src/main/res/layout/activity_cadastrar_produto.xml
+++ b/app/src/main/res/layout/activity_cadastrar_produto.xml
@@ -4,209 +4,160 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:gravity="center_horizontal|center_vertical"
+    android:background="@color/color_menu"
     android:orientation="vertical"
     android:layout_margin="@dimen/margem_tela_menu"
     tools:context=".activities.ActivityCadastrarProduto">
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:background="@color/color_menu"
-        android:orientation="vertical"
-        android:paddingLeft="20dp"
-        android:paddingTop="20dp"
-        android:paddingRight="20dp"
-        android:paddingBottom="20dp">
-
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="@string/formulario_nome"
-            android:textColor="@color/bg_cadastra_produto" />
-
-        <EditText
-            android:id="@+id/editTextNomeProduto"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:background="@color/bg_cadastra_produto"
-            android:inputType="textPersonName"
-            android:textColor="@color/hint_cadastra_produto" />
-
-        <Space
-            android:layout_width="match_parent"
-            android:layout_height="20dp"
-            android:background="@color/bg_tela_login_menor" />
-
-        <RelativeLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="horizontal">
-
-            <LinearLayout
-                android:id="@+id/relativeLayoutQuantidade"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:orientation="vertical"
-
-                >
-
-                <TextView
-                    android:id="@+id/textViewQuantidade"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="@string/formulario_quantidade"
-                    android:textColor="@color/bg_cadastra_produto" />
-
-                <EditText
-                    android:id="@+id/editTextQuantidadeProduto"
-                    android:layout_width="70dp"
-                    android:layout_height="wrap_content"
-                    android:background="@color/bg_cadastra_produto"
-                    android:inputType="numberSigned"
-                    android:maxLength="4" />
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        android:layout_margin="@dimen/margem_tela_menu"
+        android:layout_weight="1"
+        >
 
 
-            </LinearLayout>
-
-            <LinearLayout
-                android:id="@+id/relativeLayoutData"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_alignParentRight="true"
-                android:orientation="vertical">
-
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="@string/formulario_data"
-                    android:textColor="@color/bg_cadastra_produto" />
-
-                <EditText
-                    android:id="@+id/editTextDataEntradaProduto"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:background="@color/bg_cadastra_produto"
-                    android:inputType="date"
-                    android:maxLength="10" />
-
-            </LinearLayout>
-
-
-        </RelativeLayout>
-
-        <Space
-            android:layout_width="match_parent"
-            android:layout_height="20dp"
-            android:background="@color/bg_tela_login_menor" />
-
-
-        <RelativeLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="horizontal">
-
-            <LinearLayout
-                android:id="@+id/relativeLayoutPrecoCompra"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:orientation="vertical"
-
-                >
-
-                <TextView
-                    android:id="@+id/textViewPrecoCompra"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="@string/formulario_preco_compra"
-                    android:textColor="@color/bg_cadastra_produto" />
-
-                <EditText
-                    android:id="@+id/editTextPrecoCompra"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:background="@color/bg_cadastra_produto"
-                    android:inputType="numberDecimal" />
-
-
-            </LinearLayout>
-
-            <LinearLayout
-                android:id="@+id/relativeLayoutPrecoVenda"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_alignParentRight="true"
-                android:orientation="vertical">
-
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="@string/formulario_preco_venda"
-                    android:textColor="@color/bg_cadastra_produto" />
-
-                <EditText
-                    android:id="@+id/editTextPrecoVenda"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:background="@color/bg_cadastra_produto"
-                    android:inputType="numberDecimal" />
-
-            </LinearLayout>
-
-
-        </RelativeLayout>
-
-
-        <Space
-            android:layout_width="match_parent"
-            android:layout_height="20dp"
-            android:background="@color/bg_tela_login_menor" />
-
-
-        <RelativeLayout
+        <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="vertical">
 
+            <Space
+                android:layout_width="match_parent"
+                android:layout_height="@dimen/espaco_formulario" />
+
+            <EditText
+                android:id="@+id/editTextNomeProduto"
+                android:layout_width="match_parent"
+                android:layout_height="@dimen/box_formulario"
+                android:layout_marginTop="@dimen/margem_tela_cadastro"
+                android:layout_marginEnd="@dimen/margem_tela_cadastro"
+                android:layout_marginStart="@dimen/margem_tela_cadastro"
+                android:autofillHints=""
+                android:hint="@string/nome"
+                android:textSize="@dimen/font_formulario"
+                android:background="@drawable/box_formulario_background"
+                android:inputType="textPersonName"/>
+
+            <Space
+                android:layout_width="match_parent"
+                android:layout_height="@dimen/espaco_formulario" />
+
+            <EditText
+                android:id="@+id/editTextQuantidadeProduto"
+                android:layout_width="match_parent"
+                android:layout_height="@dimen/box_formulario"
+                android:layout_marginTop="@dimen/margem_tela_cadastro"
+                android:layout_marginEnd="@dimen/margem_tela_cadastro"
+                android:layout_marginStart="@dimen/margem_tela_cadastro"
+                android:background="@drawable/box_formulario_background"
+                android:inputType="numberSigned"
+                android:hint="@string/formulario_quantidade"
+                android:textSize="@dimen/font_formulario" />
+
+            <Space
+                android:layout_width="match_parent"
+                android:layout_height="@dimen/espaco_formulario" />
+
+            <EditText
+                android:id="@+id/editTextDataEntradaProduto"
+                android:layout_width="match_parent"
+                android:layout_height="@dimen/box_formulario"
+                android:layout_marginTop="@dimen/margem_tela_cadastro"
+                android:layout_marginEnd="@dimen/margem_tela_cadastro"
+                android:layout_marginStart="@dimen/margem_tela_cadastro"
+                android:background="@drawable/box_formulario_background"
+                android:inputType="numberSigned"
+                android:hint="@string/formulario_data"
+                android:textSize="@dimen/font_formulario" />
+
+            <Space
+                android:layout_width="match_parent"
+                android:layout_height="@dimen/espaco_formulario" />
+
             <LinearLayout
-                android:id="@+id/relativeLayoutAtivo"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:orientation="vertical"
+                android:orientation="horizontal">
 
-                >
-
-                <CheckBox
-                    android:id="@+id/checkBoxAtivo"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="@string/formulario_produto_ativo"
-                    android:textColor="@color/bg_cadastra_produto"/>
-
-            </LinearLayout>
-
-            <LinearLayout
-                android:id="@+id/relativeLayoutSalvar"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_alignParentRight="true"
-                android:orientation="vertical">
-
-                <Button
-                    android:id="@+id/buttonSalvarProduto"
+                <EditText
+                    android:id="@+id/editTextPrecoCompra"
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:textColor="@color/color_menu"
-                    android:textStyle="bold"
-                    android:text="@string/formulario_botao_salvar" />
+                    android:layout_height="@dimen/box_formulario"
+                    android:layout_marginTop="@dimen/margem_tela_cadastro"
+                    android:layout_marginEnd="@dimen/margem_tela_cadastro"
+                    android:layout_marginStart="@dimen/margem_tela_cadastro"
+                    android:background="@drawable/box_formulario_background"
+                    android:hint="@string/formulario_preco_compra"
+                    android:inputType="numberDecimal"
+                    android:textSize="@dimen/font_formulario" />
+
+
+                <EditText
+                    android:id="@+id/editTextPrecoVenda"
+                    android:layout_width="match_parent"
+                    android:layout_height="@dimen/box_formulario"
+                    android:layout_marginLeft="@dimen/margem_tela_cadastro"
+                    android:layout_marginTop="@dimen/margem_tela_cadastro"
+                    android:layout_marginEnd="@dimen/margem_tela_cadastro"
+                    android:autofillHints=""
+                    android:background="@drawable/box_formulario_background"
+                    android:inputType="numberDecimal"
+                    android:hint="@string/formulario_preco_venda"
+                    android:maxLength="4"
+                    android:textSize="@dimen/font_formulario" />
+
 
             </LinearLayout>
 
+            <Space
+                android:layout_width="match_parent"
+                android:layout_height="@dimen/espaco_formulario" />
 
-        </RelativeLayout>
+
+            <EditText
+                android:id="@+id/editTextDecricao"
+                android:layout_width="match_parent"
+                android:layout_height="90dp"
+                android:layout_marginTop="@dimen/margem_tela_cadastro"
+                android:layout_marginEnd="@dimen/margem_tela_cadastro"
+                android:layout_marginStart="@dimen/margem_tela_cadastro"
+                android:background="@drawable/box_formulario_background"
+                android:inputType="textWebEditText"
+                android:hint="@string/formulario_descricao"
+                android:textSize="@dimen/font_formulario" />
+
+            <Space
+                android:layout_width="match_parent"
+                android:layout_height="@dimen/espaco_formulario" />
+
+            <CheckBox
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:id="@+id/checkboxAtivo"
+                android:text="Ativo"
+                android:textColor="@color/fontTelaLogin"/>
+
+
+
+
+
+        </LinearLayout>
 
 
     </LinearLayout>
 
+    <Button
+        android:id="@+id/buttonSalvarProduto"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="@dimen/margem_tela_menu"
+        android:layout_gravity="center_horizontal|center_vertical"
+        android:drawableTop="@drawable/ic_save_black_24dp"
+        android:background="@drawable/button_background"
+        android:text="@string/salvar"
+        android:textSize="@dimen/font_formulario"
+        />
 
 </LinearLayout>
