--- a/app/src/main/res/layout/activity_menu_produto.xml
+++ b/app/src/main/res/layout/activity_menu_produto.xml
@@ -11,28 +11,64 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_marginLeft="8dp"
+        android:layout_marginTop="8dp"
         android:orientation="horizontal">
 
-        <Button
-            android:id="@+id/buttonCadastrarProduto"
+        <EditText
+            android:id="@+id/editTextbuscar"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_alignParentLeft="true"
-            android:textColor="@color/color_menu"
-            android:textStyle="bold"
-            android:text="@string/cadastrar" />
+            android:autofillHints=""
+            android:background="@android:color/white"
+            android:ems="10"
+            android:inputType="textPersonName"
+            android:textSize="22sp"
+            tools:targetApi="o" />
 
         <Button
-            android:id="@+id/buttonConsultarProduto"
-            android:layout_width="wrap_content"
+            android:id="@+id/buttonBuscar"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_alignParentRight="true"
-            android:textColor="@color/color_menu"
-            android:textStyle="bold"
+            android:background="@drawable/button_background"
             android:text="@string/buscar" />
 
+    </LinearLayout>
+
+    <LinearLayout
+        android:layout_width="wrap_content"
+        android:orientation="horizontal"
+        android:layout_height="match_parent"
+        android:layout_weight="1">
+
+        <ScrollView
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="vertical">
+
+                <ListView
+                    android:id="@+id/listViewProdutos"
+                    android:layout_width="match_parent"
+                    android:layout_height="400dp"
+                    android:layout_marginStart="8dp"
+                    android:layout_marginTop="8dp"
+                    android:layout_marginEnd="8dp" />
+            </LinearLayout>
+        </ScrollView>
 
     </LinearLayout>
+
+    <ImageButton
+        android:id="@+id/buttonCadrastarProduto"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:src="@drawable/ic_add_circle_black_24dp"
+        android:layout_gravity="center|bottom"/>
+
 
 
 </LinearLayout>
