--- a/app/src/main/res/layout/activity_menu_produto.xml
+++ b/app/src/main/res/layout/activity_menu_produto.xml
@@ -54,6 +54,7 @@
                     android:id="@+id/listViewProdutos"
                     android:layout_width="match_parent"
                     android:layout_height="400dp"
+                    android:focusable="true"
                     android:layout_marginStart="8dp"
                     android:layout_marginTop="8dp"
                     android:layout_marginEnd="8dp" />
