Melhorias no listview de produto

--- a/app/src/main/res/layout/activity_menu_produto.xml
+++ b/app/src/main/res/layout/activity_menu_produto.xml
@@ -43,21 +43,21 @@
 
         <ScrollView
             android:layout_width="match_parent"
-            android:layout_height="match_parent">
+            android:layout_height="400dp">
 
             <LinearLayout
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
+                android:layout_height="400dp"
                 android:orientation="vertical">
 
                 <ListView
                     android:id="@+id/listViewProdutos"
                     android:layout_width="match_parent"
-                    android:layout_height="400dp"
-                    android:focusable="true"
+                    android:layout_height="350dp"
                     android:layout_marginStart="8dp"
                     android:layout_marginTop="8dp"
-                    android:layout_marginEnd="8dp" />
+                    android:layout_marginEnd="8dp"
+                    android:focusable="true" />
             </LinearLayout>
         </ScrollView>
 
