--- a/app/src/main/res/layout/layout_produto.xml
+++ b/app/src/main/res/layout/layout_produto.xml
@@ -6,8 +6,10 @@
 
     <TextView
         android:id="@+id/textViewLayoutProdutoNome"
-        android:textColor="@color/bg_tela_login"
+        android:textColor="@color/color_menu"
         android:layout_width="match_parent"
+        android:textSize="@dimen/font_formulario"
+        android:textStyle="bold"
         android:layout_height="wrap_content"
         />
 
@@ -17,37 +19,54 @@
         android:orientation="horizontal">
 
         <TextView
-            android:textColor="@color/bg_tela_login"
+            android:textColor="@color/color_icone_menu"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Quantidade: "
+            android:text="@string/formulario_quantidade"
             />
+        <Space
+            android:layout_width="@dimen/espaco_views_horizontal"
+            android:layout_height="10dp" />
 
         <TextView
             android:id="@+id/textViewLayoutProdutoQuantidade"
-            android:textColor="@color/bg_tela_login"
-            android:layout_width="wrap_content"
+            android:textColor="@color/color_menu"
+            android:paddingLeft="10dp"
+            android:paddingRight="10dp"
+            android:layout_width="53dp"
             android:layout_height="wrap_content"
+            android:background="@drawable/button_background"
             />
         <Space
-            android:layout_width="10dp"
+            android:layout_width="@dimen/espaco_views_horizontal"
             android:layout_height="10dp" />
 
         <TextView
-            android:textColor="@color/bg_tela_login"
+            android:textColor="@color/color_icone_menu"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Data Entrada: "
+            android:text="@string/formulario_data"
             />
+
+        <Space
+            android:layout_width="@dimen/espaco_views_horizontal"
+            android:layout_height="10dp" />
 
         <TextView
             android:id="@+id/textViewLayoutProdutoData"
-            android:textColor="@color/bg_tela_login"
-            android:layout_width="wrap_content"
+            android:textColor="@color/color_menu"
+            android:paddingLeft="10dp"
+            android:paddingRight="10dp"
+            android:layout_width="100dp"
             android:layout_height="wrap_content"
+            android:background="@drawable/button_background"
             />
 
     </LinearLayout>
+
+    <Space
+        android:layout_width="@dimen/espaco_views_horizontal"
+        android:layout_height="@dimen/espaco_views_vertical" />
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -55,37 +74,54 @@
         android:orientation="horizontal">
 
         <TextView
-            android:textColor="@color/bg_tela_login"
+            android:textColor="@color/color_icone_menu"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Preco Compra: "
-            />
-
-        <TextView
-            android:id="@+id/textViewLayoutProdutoPrecoCompra"
-            android:textColor="@color/bg_tela_login"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:text="@string/formulario_preco_compra"
             />
         <Space
-            android:layout_width="10dp"
+            android:layout_width="@dimen/espaco_views_horizontal"
             android:layout_height="10dp" />
 
         <TextView
-            android:textColor="@color/bg_tela_login"
+            android:id="@+id/textViewLayoutProdutoPrecoCompra"
+            android:textColor="@color/color_menu"
+            android:paddingLeft="10dp"
+            android:paddingRight="10dp"
+            android:layout_width="60dp"
+            android:layout_height="wrap_content"
+            android:background="@drawable/button_background"
+            />
+        <Space
+            android:layout_width="@dimen/espaco_views_horizontal"
+            android:layout_height="10dp" />
+
+        <TextView
+            android:textColor="@color/color_icone_menu"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Preco Venda: "
+            android:text="@string/formulario_preco_venda"
             />
+
+        <Space
+            android:layout_width="@dimen/espaco_views_horizontal"
+            android:layout_height="10dp" />
 
         <TextView
             android:id="@+id/textViewLayoutProdutoPrecoVenda"
-            android:textColor="@color/bg_tela_login"
-            android:layout_width="wrap_content"
+            android:textColor="@color/color_menu"
+            android:paddingLeft="10dp"
+            android:paddingRight="10dp"
+            android:layout_width="60dp"
             android:layout_height="wrap_content"
+            android:background="@drawable/button_background"
             />
 
     </LinearLayout>
+
+    <Space
+        android:layout_width="@dimen/espaco_views_horizontal"
+        android:layout_height="@dimen/espaco_views_vertical" />
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -93,12 +129,31 @@
         android:orientation="horizontal">
 
         <TextView
-            android:id="@+id/textViewLayoutProdutoDescricao"
-            android:textColor="@color/bg_tela_login"
+            android:textColor="@color/color_icone_menu"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:text="@string/formulario_descricao"
+            />
+        <Space
+            android:layout_width="@dimen/espaco_views_horizontal"
+            android:layout_height="10dp" />
+
+        <TextView
+            android:id="@+id/textViewLayoutProdutoDescricao"
+            android:textColor="@color/color_menu"
+            android:paddingLeft="10dp"
+            android:paddingRight="10dp"
+            android:layout_width="match_parent"
+            android:layout_height="50dp"
+            android:background="@drawable/button_background"
             />
 
+
     </LinearLayout>
+
+    <Space
+        android:layout_width="@dimen/espaco_views_horizontal"
+        android:layout_height="@dimen/margem_tela_menu" />
+
 
 </LinearLayout>
