--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -2,7 +2,7 @@
 <resources>
     <color name="colorPrimary">#008577</color>
     <color name="colorPrimaryDark">#00574B</color>
-    <color name="colorAccent">#D81B60</color>
+    <color name="colorAccent">#0AEED3</color>
     <color name="bg_tela_login">#C1C2C0</color>
     <color name="bg_tela_login_menor">#C8A2B2EE</color>
     <color name="bg_cadastra_produto">#FFFFFF</color>
