--- a/app/src/main/res/layout/layout_produto.xml
+++ b/app/src/main/res/layout/layout_produto.xml
@@ -2,7 +2,9 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:background="@color/bg_tela_login_menor"
+    android:padding="@dimen/espaco_views_horizontal">
 
     <TextView
         android:id="@+id/textViewLayoutProdutoNome"
